# small-shop-review-agent

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  PROJECT_ANALYSIS_REPORT.md  README.md  pyproject.toml  requirements.txt  run_app.py
agents/: review_agent.py
apps/api/: main.py
apps/streamlit_app/: app.py
data/: small_shop.db-wal
docs/: 00_project_context.md  03_database_spec.md  04_api_design.md  05_mvp_tasks.md  06_roadmap.md  AGENT_ARCHITECTURE.md  DEMO_GUIDE.md  HANDOFF.md  INTERVIEW_NOTES.md  Phase UI-0.md  acceptance_guide.md  frontend_layout_viz.html  github_pre_upload_audit.md  project_report.md  ui_design_system.md  upload_page_target_reference_compact.html
mcps/reviews/: mcp_client.py  mcp_server.py
scripts/: demo_load_reviews.py  e2e_demo_check.py  init_db.py  smoke_test_dashboard_data.py  smoke_test_demo_loader.py  smoke_test_demo_workflow.py  smoke_test_evidence_guard.py  smoke_test_live_openai_sample.py  smoke_test_live_workflow_contract.py  smoke_test_llm_router.py  smoke_test_openai_provider_contract.py  smoke_test_reply_review_flow.py  smoke_test_repos.py  smoke_test_review_service.py  smoke_test_safety_guardrails.py  smoke_test_schema_guard.py  smoke_test_services.py  smoke_test_structured_retry.py  smoke_test_trace_eval_page_data.py  smoke_test_upload_flow.py
tests/: conftest.py
tests/fixtures/: safety_red_team_cases.json
tests/unit/: test_agent_async.py  test_agent_routing.py  test_agent_tools.py  test_approval_memory.py  test_consistency_check.py  test_csv_validator.py  test_dual_engine_guard.py  test_eval_service.py  (+15 more)
(+109 files in other folders)
