[project]
name = "small-shop-agent"
version = "0.1.0"
description = "Small Shop Review Response & Insight Agent"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28",
    "pandas>=2.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
