[project]
name = "small-shop-agent"
version = "0.1.0"
description = "Small Shop Review Response & Insight Agent"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28",
    "pandas>=2.0",
    "loguru>=0.7",
    "pydantic>=1.10",
    "python-dotenv>=1.0",
    "openai>=1.29.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
